@@ -1,0 +1,54 @@
+/*
+ *  R : A Computer Language for Statistical Data Analysis
+ *  Copyright (C) 2015 The R Core Team
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, a copy is available at
+ *  http://www.r-project.org/Licenses/
+ */
+
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
+
+#include <Defn.h>
+#include <Internal.h>
+
+#ifdef HAVE_CURL_CURL_H
+# include <curl/curl.h>
+#endif
+
+SEXP attribute_hidden do_curlVersion(SEXP call, SEXP op, SEXP args, SEXP rho)
+{
+    SEXP ans = PROTECT(allocVector(STRSXP, 1));
+#ifdef HAVE_CURL_CURL_H
+    curl_version_info_data *d = curl_version_info(CURLVERSION_NOW);
+    SET_STRING_ELT(ans, 0, mkChar(d->version));
+    setAttrib(ans, install("ssl_version"), 
+	      mkString(d->ssl_version ? d->ssl_version : "none"));
+    setAttrib(ans, install("libssh_version"), 
+	      mkString(((d->age >= 3) && d->libssh_version) ? d->libssh_version : ""));
+    const char * const *p;
+    int n, i; 
+    for(p = d->protocols, n = 0; *p; p++, n++) ;
+    SEXP protocols = PROTECT(allocVector(STRSXP, n));
+    for(p = d->protocols, i = 0; i < n; i++, p++)
+	SET_STRING_ELT(protocols, i, mkChar(*p));
+    setAttrib(ans, install("protocols"), protocols);
+    UNPROTECT(1);
+#else
+    SET_STRING_ELT(ans, 0, mkChar(""));
+#endif
+    UNPROTECT(1);
+    return ans;
+}
